<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/remote_sources">

    <ListPreference
        android:key="sources_sort_order"
        android:title="@string/sort_order"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="sources_grid"
        android:title="@string/show_in_grid_view" />

    <Preference
        android:key="setup_wizard"
        android:persistent="false"
        android:summary="@string/setup_wizard_summary"
        android:title="@string/setup_wizard" />

    <PreferenceScreen
        android:fragment="org.skepsun.kototoro.settings.sources.manage.SourcesManageFragment"
        android:key="remote_sources"
        android:persistent="false"
        android:title="@string/manage_sources" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="sources_enabled_all"
        android:summary="@string/enable_all_sources_summary"
        android:title="@string/enable_all_sources"
        app:allowDividerAbove="true" />

    <Preference
        android:key="sources_catalog"
        android:persistent="false"
        android:title="@string/sources_catalog" />

    <PreferenceScreen
        android:fragment="org.skepsun.kototoro.settings.sources.jsonsource.JsonSourcesFragment"
        android:key="json_sources"
        android:persistent="false"
        android:summary="@string/json_sources_summary"
        android:title="@string/json_sources" />

    <Preference
        android:key="import_json_sources"
        android:persistent="false"
        android:summary="@string/import_json_sources_summary"
        android:title="@string/import_json_sources" />

    <PreferenceScreen
        android:fragment="org.skepsun.kototoro.settings.sources.mihon.MihonExtensionsFragment"
        android:key="mihon_extensions"
        android:persistent="false"
        android:summary="@string/mihon_extensions_summary"
        android:title="@string/mihon_extensions" />

    <PreferenceScreen
        android:fragment="org.skepsun.kototoro.settings.sources.aniyomi.AniyomiExtensionsFragment"
        android:key="aniyomi_extensions"
        android:persistent="false"
        android:summary="@string/aniyomi_extensions_summary"
        android:title="@string/aniyomi_extensions" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="extensions_filter_lang"
        android:summary="@string/filter_extensions_by_language_summary"
        android:title="@string/filter_extensions_by_language" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="no_nsfw"
        android:summary="@string/disable_nsfw_summary"
        android:title="@string/disable_nsfw" />

    <ListPreference
        android:entries="@array/incognito_nsfw_options"
        android:key="incognito_nsfw"
        android:title="@string/incognito_for_nsfw"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="tags_warnings"
        android:summary="@string/tags_warnings_summary"
        android:title="@string/tags_warnings" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="mirror_switching"
        android:summary="@string/mirror_switching_summary"
        android:title="@string/mirror_switching"
        app:allowDividerAbove="true" />

    <SwitchPreferenceCompat
        android:key="handle_links"
        android:persistent="false"
        android:summary="@string/handle_links_summary"
        android:title="@string/handle_links" />

</androidx.preference.PreferenceScreen>
