<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/downloads"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<Preference
		android:key="local_manga_dirs"
		android:persistent="false"
		android:title="@string/local_manga_directories" />

	<Preference
		android:key="local_storage"
		android:persistent="false"
		android:title="@string/manga_save_location" />

	<ListPreference
		android:entries="@array/download_formats"
		android:key="downloads_format"
		android:title="@string/preferred_download_format"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="downloads_align_reader"
		android:title="@string/download_align_reader"
		android:summary="@string/download_align_reader_summary" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="downloads_auto_retry"
		android:title="@string/download_auto_retry"
		android:summary="@string/download_auto_retry_summary" />

	<org.skepsun.kototoro.settings.utils.SliderPreference
		android:key="downloads_threads"
		android:title="@string/download_threads"
		android:summary="@string/download_threads_summary"
		android:valueFrom="1"
		android:valueTo="10"
		app:defaultValue="3"
		app:useSimpleSummaryProvider="true" />

	<org.skepsun.kototoro.settings.utils.SliderPreference
		android:key="downloads_request_delay"
		android:title="@string/download_request_delay"
		android:summary="@string/download_request_delay_summary"
		android:valueFrom="0"
		android:valueTo="5000"
		android:stepSize="100"
		app:defaultValue="1600"
		app:useSimpleSummaryProvider="true" />

	<org.skepsun.kototoro.settings.utils.SliderPreference
		android:key="downloads_retry_count"
		android:title="@string/download_retry_count"
		android:summary="@string/download_retry_count_summary"
		android:valueFrom="1"
		android:valueTo="10"
		app:defaultValue="5"
		app:useSimpleSummaryProvider="true" />

	<org.skepsun.kototoro.settings.utils.SliderPreference
		android:key="downloads_retry_delay"
		android:title="@string/download_retry_delay"
		android:summary="@string/download_retry_delay_summary"
		android:valueFrom="500"
		android:valueTo="10000"
		android:stepSize="500"
		app:defaultValue="2000"
		app:useSimpleSummaryProvider="true" />

	<ListPreference
		android:entries="@array/metered_network_options"
		android:key="downloads_metered_network"
		android:title="@string/download_over_cellular"
		app:useSimpleSummaryProvider="true" />

	<Preference
		android:icon="@drawable/ic_info_outline"
		android:key="tracker_notifications_info"
		android:persistent="false"
		android:selectable="false"
		android:summary="@string/downloads_settings_info" />

	<Preference
		android:key="ignore_dose"
		android:persistent="false"
		android:summary="@string/disable_battery_optimization_summary_downloads"
		android:title="@string/disable_battery_optimization"
		app:allowDividerAbove="true"
		app:isPreferenceVisible="false" />

	<PreferenceCategory android:title="@string/pages_saving">

		<Preference
			android:key="pages_dir"
			android:persistent="false"
			android:title="@string/default_page_save_dir" />

		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="pages_dir_ask"
			android:title="@string/ask_for_dest_dir_every_time" />

	</PreferenceCategory>

</PreferenceScreen>
