<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/appearance">

    <org.skepsun.kototoro.settings.utils.ThemeChooserPreference
        android:key="color_theme"
        android:title="@string/color_theme" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/themes"
        android:entryValues="@array/values_theme"
        android:key="theme"
        android:title="@string/theme"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="use_frosted_navbar"
        android:summary="@string/frosted_navbar_summary"
        android:title="@string/frosted_navbar_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="amoled_theme"
        android:summary="@string/black_dark_theme_summary"
        android:title="@string/black_dark_theme" />

    <org.skepsun.kototoro.settings.utils.ActivityListPreference
        android:key="app_locale"
        android:title="@string/language" />

    <ListPreference
        android:entries="@array/loading_circle_styles"
        android:entryValues="@array/values_loading_circle_style"
        android:key="loading_circle_style"
        android:title="@string/pref_loading_circle_style"
        android:defaultValue="md3"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory android:title="@string/manga_list">

        <ListPreference
            android:entries="@array/list_modes"
            android:key="list_mode_2"
            android:title="@string/list_mode"
            app:useSimpleSummaryProvider="true" />

        <org.skepsun.kototoro.settings.utils.SliderPreference
            android:key="grid_size"
            android:stepSize="5"
            android:title="@string/grid_size"
            android:valueFrom="50"
            android:valueTo="150"
            app:defaultValue="100" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="quick_filter"
            android:summary="@string/show_quick_filters_summary"
            android:title="@string/show_quick_filters" />

        <ListPreference
            android:entries="@array/progress_indicators"
            android:key="progress_indicators"
            android:title="@string/show_reading_indicators"
            app:useSimpleSummaryProvider="true" />

        <MultiSelectListPreference
            android:defaultValue="@array/values_list_badges"
            android:entries="@array/list_badges"
            android:entryValues="@array/values_list_badges"
            android:key="manga_list_badges"
            android:title="@string/badges_in_lists" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/details">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="description_collapse"
            android:title="@string/collapse_long_description" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="panorama_enabled"
            android:title="@string/pref_panorama_cover"
            android:summary="@string/pref_panorama_cover_summary" />

        <org.skepsun.kototoro.settings.utils.SliderPreference
            android:key="panorama_blur"
            android:dependency="panorama_enabled"
            android:stepSize="5"
            android:title="@string/pref_panorama_blur"
            android:valueFrom="0"
            android:valueTo="100"
            app:defaultValue="35" />

        <org.skepsun.kototoro.settings.utils.SliderPreference
            android:key="panorama_extra_height"
            android:dependency="panorama_enabled"
            android:stepSize="5"
            android:title="@string/pref_panorama_extra_height"
            android:valueFrom="0"
            android:valueTo="100"
            app:defaultValue="50" />

        <org.skepsun.kototoro.settings.utils.SliderPreference
            android:key="panorama_bottom_gradient_alpha"
            android:dependency="panorama_enabled"
            android:stepSize="5"
            android:title="@string/pref_panorama_gradient_alpha"
            android:valueFrom="0"
            android:valueTo="100"
            app:defaultValue="100" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pages_tab"
            android:summary="@string/show_pages_thumbs_summary"
            android:title="@string/show_pages_thumbs" />

        <ListPreference
            android:defaultValue="-1"
            android:dependency="pages_tab"
            android:entries="@array/details_tabs"
            android:entryValues="@array/details_tabs_values"
            android:key="details_tab"
            android:title="@string/default_tab"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/main_screen">

        <MultiSelectListPreference
            android:key="search_suggest_types"
            android:title="@string/search_suggestions" />

        <PreferenceScreen
            android:fragment="org.skepsun.kototoro.settings.nav.NavConfigFragment"
            android:key="nav_main"
            android:title="@string/main_screen_sections" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="shared_element_transitions"
            android:summary="@string/shared_element_transitions_summary"
            android:title="@string/shared_element_transitions" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="search_filter_hidden"
            android:summary="@string/hide_search_filter_summary"
            android:title="@string/hide_search_filter" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="main_fab"
            android:summary="@string/main_screen_fab_summary"
            android:title="@string/main_screen_fab" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="nav_labels"
            android:title="@string/show_labels_in_navbar" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="nav_pinned"
            android:summary="@string/pin_navigation_ui_summary"
            android:title="@string/pin_navigation_ui" />

        <ListPreference
            android:defaultValue="standard"
            android:entries="@array/blur_modes"
            android:entryValues="@array/values_blur_mode"
            android:key="blur_mode"
            android:summary="@string/pref_blur_mode_summary"
            android:title="@string/pref_blur_mode" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="nav_floating"
            android:summary="@string/pref_nav_floating_summary"
            android:title="@string/pref_nav_floating" />

        <org.skepsun.kototoro.settings.utils.SliderPreference
            android:key="nav_height"
            android:stepSize="4"
            android:title="@string/pref_nav_height"
            android:valueFrom="48"
            android:valueTo="88"
            app:defaultValue="80" />

        <org.skepsun.kototoro.settings.utils.SliderPreference
            android:key="nav_floating_height"
            android:stepSize="4"
            android:title="@string/pref_nav_floating_height"
            android:valueFrom="48"
            android:valueTo="84"
            app:defaultValue="56" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="reader_toolbar_floating"
            android:summary="@string/pref_reader_toolbar_floating_summary"
            android:title="@string/pref_reader_toolbar_floating" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="exit_confirm"
            android:summary="@string/exit_confirmation_summary"
            android:title="@string/exit_confirmation" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="dynamic_shortcuts"
            android:summary="@string/history_shortcuts_summary"
            android:title="@string/history_shortcuts" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/privacy">

        <SwitchPreferenceCompat
            android:key="protect_app"
            android:persistent="false"
            android:summary="@string/protect_application_summary"
            android:title="@string/protect_application" />

        <ListPreference
            android:defaultValue="allow"
            android:entries="@array/screenshots_policy"
            android:key="screenshots_policy"
            android:title="@string/screenshots_policy"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
