<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/ai_api_settings">

    <Preference
        android:key="reader_translation_api_usage_info"
        android:selectable="false"
        android:summary="@string/ai_api_usage_summary_local_first"
        android:title="@string/reader_translation_mode" />

    <ListPreference
        android:defaultValue="CUSTOM"
        android:entries="@array/reader_translation_api_provider_presets"
        android:entryValues="@array/values_reader_translation_api_provider_presets"
        android:key="reader_translation_api_provider_preset"
        android:summary="@string/reader_translation_api_provider_preset_summary"
        android:title="@string/reader_translation_api_provider_preset"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="reader_translation_api_endpoint"
        android:singleLine="true"
        android:summary="@string/reader_translation_api_endpoint_summary"
        android:title="@string/reader_translation_api_endpoint"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="reader_translation_api_key"
        android:singleLine="true"
        android:summary="@string/reader_translation_api_key_summary"
        android:title="@string/reader_translation_api_key"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="gpt-4o-mini"
        android:key="reader_translation_api_model"
        android:singleLine="true"
        android:summary="@string/reader_translation_api_model_summary"
        android:title="@string/reader_translation_api_model"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="reader_translation_api_custom_headers"
        android:singleLine="true"
        android:summary="@string/reader_translation_api_custom_headers_summary"
        android:title="@string/reader_translation_api_custom_headers"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="reader_translation_api_fetch_models"
        android:summary="@string/reader_translation_api_models_fetch_summary"
        android:title="@string/reader_translation_api_models_fetch" />

</PreferenceScreen>
