<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/playback_settings">

	<ListPreference
		android:entries="@array/video_decoder_modes"
		android:key="video_decoder_mode"
		android:title="@string/video_decoder_mode"
		app:useSimpleSummaryProvider="true" />

	<ListPreference
		android:entries="@array/video_renderer_modes"
		android:key="video_renderer_mode"
		android:title="@string/video_renderer_mode"
		app:useSimpleSummaryProvider="true" />

	<ListPreference
		android:entries="@array/reader_backgrounds"
		android:key="video_background"
		android:title="@string/video_background"
		app:useSimpleSummaryProvider="true" />

	<Preference
		android:key="video_mpv_conf_trigger"
		android:title="@string/video_mpv_conf"
		android:summary="@string/video_mpv_conf_hint"
		app:allowDividerAbove="true" />

	<PreferenceScreen
		android:key="playback_ai_video_settings_entry"
		android:fragment="org.skepsun.kototoro.settings.AISettingsFragment"
		android:title="@string/ai_settings"
		android:summary="@string/ai_settings_entry_summary"
		app:allowDividerAbove="true" />

	<org.skepsun.kototoro.settings.utils.SliderPreference
		android:key="video_cache_mb"
		android:title="@string/video_cache_size"
		android:valueFrom="256"
		android:valueTo="4096"
		android:stepSize="128"
		app:defaultValue="1024"
		app:allowDividerAbove="true" />

	<org.skepsun.kototoro.settings.utils.SliderPreference
		android:key="video_controls_alpha"
		android:title="@string/video_controls_alpha"
		android:valueFrom="30"
		android:valueTo="100"
		android:stepSize="1"
		app:defaultValue="90" />

	<org.skepsun.kototoro.settings.utils.SliderPreference
		android:key="video_gradient_alpha"
		android:title="@string/video_gradient_alpha"
		android:valueFrom="0"
		android:valueTo="100"
		android:stepSize="1"
		app:defaultValue="70" />

</PreferenceScreen>
